feature(cidr): ci 설정